outputs/tsp_constructive-constructive/ab-mcts-ahd/2025-09-23_13-25-11/evaluations/problem_eval-108814024418735955_stdout.txt
Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 11, in <module>
    from gpt import select_next_node_v2 as select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    defined as the difference between the current distance and the average distance to remaining nodes, and the weight between these factors is adjusted based on the ratio of remaining nodes to total nodes, favoring exploration when more nodes are left.}
                                                                                                                                                                                                                                                             ^
SyntaxError: unmatched '}'

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 13, in <module>
    from gpt import select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    defined as the difference between the current distance and the average distance to remaining nodes, and the weight between these factors is adjusted based on the ratio of remaining nodes to total nodes, favoring exploration when more nodes are left.}
                                                                                                                                                                                                                                                             ^
SyntaxError: unmatched '}'
